crates/model/tests/compile_fail/model_no_root_keyword.stderr
error: first entry must be `root: <RootResourceGroup>`
 --> tests/compile_fail/model_no_root_keyword.rs:8:9
  |
8 |         Cluster,
  |         ^^^^^^^
